feat(rag, mcp): stream pipeline, MCP, prompts, and doc hygiene - Add stream chat pipeline and context types used by the streaming path end-to-end. - Consolidate MCP in bootstrap: in-process client/tool execution; drop legacy DTOs and remote HTTP client code. - Refresh RAG prompt templates (.st) and update services, retrieval, and memory integration accordingly. - Expand automated tests for intent routing, rewrite, embedding clients, and conversation persistence. - Apply doc hygiene: ASCII quotes in comments, Markdown, and YAML instead of curly quotation marks.